--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -13,6 +13,10 @@ config:
     url: https://prod8-consul.vault:8500/v1/status/leader
   - name: dex
     url: http://dex.auth:5556/healthz
+  - name: ElasticSearch
+    url: http://prod8-elasticsearch-client.logging:9200/_cluster/health
+    jsonpath: status
+    regexp: green
   - name: Grafana
     url: http://prod8-grafana.monitoring/api/health
   - name: IDM
