--- a/chart/values-stage8.yaml
+++ b/chart/values-stage8.yaml
@@ -4,26 +4,33 @@
 namespace: bms
 
 config:
+  environments:
+    - demo
+    - ivv
+    - pat
+    - pdt
+    - preprod
+    - uat
   urls:
-  - name: BMS UI
-    url: http://bms.bms.svc:9292/health
-  - name: Consul
-    url: http://stage8-consul.vault:8500/v1/status/leader
-  - name: Vault
-    url: http://stage8-vault.vault:8200/v1/sys/health?standbyok=true
-  - name: dex
-    url: http://dex.auth:5556/healthz
-  - name: ElasticSearch
-    url: http://stage8-elasticsearch-client.logging:9200/_cluster/health
-    type: json
-    jsonpath: status
-    regexp: green
-  - name: Grafana
-    url: http://stage8-grafana.monitoring/api/health
-  - name: IDM
-    url: https://idm.dev.bip.va.gov/ipa/ui/
-  - name: Kibana
-    url: http://stage8-kibana.logging:443/status
+    - name: BMS UI
+      url: http://bms.bms.svc:9292/health
+    - name: Consul
+      url: http://stage8-consul.vault:8500/v1/status/leader
+    - name: Vault
+      url: http://stage8-vault.vault:8200/v1/sys/health?standbyok=true
+    - name: dex
+      url: http://dex.auth:5556/healthz
+    - name: ElasticSearch
+      url: http://stage8-elasticsearch-client.logging:9200/_cluster/health
+      type: json
+      jsonpath: status
+      regexp: green
+    - name: Grafana
+      url: http://stage8-grafana.monitoring/api/health
+    - name: IDM
+      url: https://idm.dev.bip.va.gov/ipa/ui/
+    - name: Kibana
+      url: http://stage8-kibana.logging:443/status
 
 clusterrole:
   name: bms-api
